Added basic formatting to controls for usability

--- a/in-sync-frontend/src/App.css
+++ b/in-sync-frontend/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.seek {
+  margin-top: 15px;
+  width: 97%;
+}
+
+.volume {
+  margin: 0;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
