--- a/in-sync-frontend/src/components/Modal.css
+++ b/in-sync-frontend/src/components/Modal.css
@@ -1,4 +1,4 @@
-.modal {
+.appModal {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +6,6 @@
     position: fixed;
     margin-top: 50px;
     left: calc(50% - 250px);
-    top: 100px;
     background-color: white;
     padding: 15px 15px 15px 15px;
 }
