--- a/in-sync-frontend/src/pages/VideoPage.module.css
+++ b/in-sync-frontend/src/pages/VideoPage.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
+    margin-top: 64px;
 }
 
 .VideoPage p {
