--- a/in-sync-frontend/src/components/Modal.module.css
+++ b/in-sync-frontend/src/components/Modal.module.css
@@ -20,6 +20,7 @@
     left: calc(50% - 500px);
     background-color: white;
     padding: 15px 15px 15px 15px;
+    overflow-y: auto;
 }
 
 .title {
@@ -56,6 +57,11 @@
 .createButton {
     background-color: blue !important;
     color: white !important;
+    height: 35px;
+    margin-right: 15px !important;
+}
+
+.changeButton {
     height: 35px;
     margin-right: 15px !important;
 }
