added authentication to frontend and backend routes

--- a/in-sync-frontend/src/components/Modal.module.css
+++ b/in-sync-frontend/src/components/Modal.module.css
@@ -58,3 +58,13 @@
     color: white !important;
     height: 35px;
 }
+
+.createButton:disabled {
+    background-color: lightgray !important;
+    color: gray;
+}
+
+.warningText {
+    color: red;
+    padding-bottom: 10px;
+}
