--- a/in-sync-frontend/src/pages/JoinRoomPage.module.css
+++ b/in-sync-frontend/src/pages/JoinRoomPage.module.css
@@ -1,4 +1,4 @@
-.LoginPage {
+.JoinRoomPage {
     background-color: #282c34;
     min-height: 100vh;
     display: flex;
@@ -9,4 +9,9 @@
 
 .grid {
     padding: 50px;
+}
+
+.HeaderText {
+    color: white;
+    padding-top: 50px;
 }
