Fix issue with viewer not being persisted into database when someone joins by putting the URL into their browser

--- a/in-sync-frontend/src/components/UserList.module.css
+++ b/in-sync-frontend/src/components/UserList.module.css
@@ -1,5 +1,7 @@
 .userInfo {
     background-color: #253040;
+    display: flex;
+    flex-direction: row;
     height: 75px;
     margin: 10px;
 }
@@ -11,4 +13,8 @@
 
 .userName {
     padding-top: 10px;
+}
+
+.hostStar {
+    color: yellow;
 }
