Change video modal consistent size

--- a/in-sync-frontend/src/components/Modal.module.css
+++ b/in-sync-frontend/src/components/Modal.module.css
@@ -23,6 +23,11 @@
     overflow-y: auto;
 }
 
+.changeVideoModal {
+    min-height: 700px;
+    max-height: 700px;
+}
+
 .title {
     margin-bottom: 15px !important;
 }
