Altered placement of change vid and invite buttons

--- a/in-sync-frontend/src/pages/VideoPage.module.css
+++ b/in-sync-frontend/src/pages/VideoPage.module.css
@@ -26,3 +26,12 @@
 .player {
     align-content: center;
 }
+
+.changeInviteButton {
+    display: flex;
+    justify-content: space-evenly;
+    width: 400px;
+    margin-left: calc(50% - 200px);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
