Feature updated video page (#90)
* videopage changes

* Video size update

* Chat user list switch redo

* User list height inline with chat

* User list redo

* Updated invite users modal

* Conditional rendering of change video button

* Change video modal consistent size

* Created more spacing between video items

* Altered placement of change vid and invite buttons

* Move return home button to the left

* Removed cancel button from header

--- a/in-sync-frontend/src/components/Modal.module.css
+++ b/in-sync-frontend/src/components/Modal.module.css
@@ -23,6 +23,11 @@
     overflow-y: auto;
 }
 
+.changeVideoModal {
+    min-height: 700px;
+    max-height: 700px;
+}
+
 .title {
     margin-bottom: 15px !important;
 }
@@ -74,4 +79,15 @@
 .warningText {
     color: red;
     padding-bottom: 10px;
+}
+
+.copyButton {
+    width: 30%;
+    float: inline-end;
+}
+
+.copyText {
+    padding-top: 7px;
+    width: 70%;
+    float: left;
 }
