--- a/in-sync-frontend/src/pages/VideoPage.module.css
+++ b/in-sync-frontend/src/pages/VideoPage.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
-    margin-top: 64px;
+    padding: 100px 20px 20px 20px;
 }
 
 .VideoPage p {
@@ -21,4 +21,17 @@
 .addVideoButton {
     width: 150px;
     height: 50px;
+}
+
+.player {
+    align-content: center;
+}
+
+.changeInviteButton {
+    display: flex;
+    justify-content: space-evenly;
+    width: 400px;
+    margin-left: calc(50% - 200px);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
